# Taller-1-Rocket-League

./: .gitignore  CMakeLists(SDL2).txt  CMakeLists.txt  CTestCustom.cmake.in  Documentación_tecnica.md  Manual_del_proyecto.md  README.md  TODO.md  client_main.cpp  correcciones-grupo1.ods  cppcheck_run  cpplint_run  desinstaller.sh  exampleGame.cpp  exampleGame2.cpp  exampleMerged.cpp  installer.sh  main_lobby.cpp  obs-grupo1.md  observaciones.md  sdl_testing.cpp  sensors.cpp  server_main.cpp  testBox.cpp  testSDL.cc  testing.cc
data/config/: client_config.yaml  server_config.yaml
google_tests/: CMakeLists.txt  fisicas.cpp  logica.cpp  protocolo.cpp  serializacion.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  testGameLogic.cpp  testSerialize.cpp
libSDL2pp-tutorial/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lesson00  lesson01  lesson02  lesson03  lesson04  lesson05  lesson06  lesson07  lesson07.cc  testing.cc
libs/libSDL2pp/: CMakeLists.txt
src/client/: client.cpp  client.h  sdl_animation.cpp  sdl_animation.h  sdl_arena.cpp  sdl_arena.h  sdl_ball.cpp  sdl_ball.h  sdl_main.cpp  sdl_main.h  sdl_player.cpp  sdl_player.h  sdl_scoreboard.cpp  sdl_scoreboard.h  unit_conversion.cpp  unit_conversion.h
src/client_sdl/: sdl_animation.cpp  sdl_animation.h  sdl_arena.cpp  sdl_arena.h  sdl_ball.cpp  sdl_ball.h  sdl_main.cpp  sdl_main.h  sdl_music.cpp  sdl_music.h  sdl_player.cpp  sdl_player.h  sdl_scoreboard.cpp  sdl_scoreboard.h  sdl_statistics.cpp  sdl_statistics.h  sdl_waiting.cpp  sdl_waiting.h
src/common/: unit_conversion.cpp  unit_conversion.h
src/configuration/: yaml_configuration.cpp  yaml_configuration.h
src/configuration/attributes/: client_configuration_attributes.cpp  client_configuration_attributes.h  server_configuration_attributes.cpp  server_configuration_attributes.h
src/constants/: b2DVars.h  command_values.h  configuration_paths.h  logic_values.h  response_values.h  serialize_delimeter.h
src/exceptions/: blocking_queue_closed_exception.h  socket_closed_exception.h
src/game_entities/: room.cpp  room.h
src/game_model/: completeGame.cpp  completeGame.h  game_model.cpp  game_model.h  game_model_monitor.cpp  game_model_monitor.h
src/handlers/: client_connection.cpp  client_connection.h  client_handler.cpp  client_handler.h  command_handler.cpp  command_handler.h  id_service.cpp  id_service.h  receive_command_handler.cpp  receive_command_handler.h  response_handler.cpp  response_handler.h  send_response_handler.cpp  send_response_handler.h  server_connection.cpp  server_connection.h  server_endpoint.cpp  server_endpoint.h
src/handlers/enums/: mode.h
src/lobby/: lobby.cpp  lobby.h  lobby.ui
src/logic/: SoccerGoal.cpp  SoccerGoal.h  ball.cpp  ball.h  boxLogic.cpp  boxLogic.h  box_logic_monitor.cpp  box_logic_monitor.h  car.cpp  car.h  contactListenerHits.cpp  contactListenerHits.h  game.cpp  game.h  gameLogic.cpp  gameLogic.h  game_model_logic.cpp  game_model_logic.h  logicBox.cpp  logicBox.h  logicGame.cpp  logicGame.h  replay_logic.cpp  replay_logic.h  stateMachine.cpp  stateMachine.h
src/logicGame/: game.cpp  game.h  logicGame.cpp  logicGame.h  logicGameMock.cpp  logicGameMock.h
src/protocolo/: ball_response.cpp  ball_response.h  command.cpp  command.h  connection_helper.cpp  connection_helper.h  player_response.cpp  player_response.h  protocol_commands.cpp  protocol_commands.h  protocolo-tp2.cpp  protocolo-tp2.h  protocolo.cpp  protocolo.h  response.cpp  response.h
src/protocolo/commands/: command.cpp  command.h
src/protocolo/commands/strategies/: create_parameter_strategy.cpp  create_parameter_strategy.h
src/protocolo/responses/: action_result_response.cpp  action_result_response.h  ball_response.cpp  ball_response.h  connected_clients.cpp  connected_clients.h  lobby_response.cpp  lobby_response.h  match_response.cpp  match_response.h  match_responses.cpp  match_responses.h  player_response.cpp  player_response.h  player_responses.cpp  player_responses.h  response.cpp  response.h  room_response.cpp  room_response.h  room_responses.cpp  room_responses.h
src/protocolo/serializer/: entity_serializer.cpp  entity_serializer.h  serializer.cpp  serializer.h
src/queues/: command_queue.cpp  command_queue.h  response_queue.cpp  response_queue.h
src/queues/block_queues/: command_blocking_queue.cpp  command_blocking_queue.h  response_blocking_queue.cpp  response_blocking_queue.h
src/server/: server.cpp  server.h
src/sockets/: socket.cpp  socket.h
src/thread/: common_thread.cpp  common_thread.h
testingBox2D/: CMakeLists.txt
testingBox2D/box2d/: Makefile  cmake_install.cmake
testingBox2D/box2d/src/: Makefile  cmake_install.cmake
testingBox2D/box2d/testbed/: Makefile  cmake_install.cmake
testingBox2D/box2d/unit-test/: Makefile  cmake_install.cmake
